// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PurchaseOrderDetailPage > LTR snapshot 1`] = `
<div
  dir="ltr"
>
  <div
    class="flex flex-col gap-4"
  >
    <button
      class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground h-8 gap-1 [@media(pointer:coarse)]:min-h-11 w-fit px-0"
      data-size="sm"
      data-slot="button"
      data-testid="back-button"
      data-variant="ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left me-1"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
      title
    </button>
    <h1
      class="text-2xl font-semibold text-foreground"
    >
      detail
       · 
      Kabul Medical Supplies
       
      <span
        class="inline-flex items-center rounded-full bg-muted px-2.5 py-0.5 text-xs font-medium text-muted-foreground"
      >
        statusDraft
      </span>
    </h1>
    <div
      class="flex flex-wrap items-center gap-3"
    >
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
        data-size="default"
        data-slot="button"
        data-testid="mark-sent-btn"
        data-variant="default"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-send me-2"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
          />
          <path
            d="m21.854 2.147-10.94 10.939"
          />
        </svg>
        detailMarkSent
      </button>
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-background [data-theme=dark_&]:bg-transparent [data-theme=dark_&]:hover:bg-input/30 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11 text-destructive border-destructive/40 hover:bg-destructive/10 hover:text-destructive"
        data-size="default"
        data-slot="button"
        data-testid="cancel-btn"
        data-variant="outline"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-x me-2"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m15 9-6 6"
          />
          <path
            d="m9 9 6 6"
          />
        </svg>
        detailCancel
      </button>
    </div>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="mb-4 text-base font-semibold text-foreground"
      >
        detailSectionInfo
      </h2>
      <div
        class="grid gap-3 text-sm md:grid-cols-2"
      >
        <div>
          <span
            class="text-muted-foreground"
          >
            detailSupplier
            : 
          </span>
          <span
            class="text-foreground"
          >
            Kabul Medical Supplies
          </span>
        </div>
        <div>
          <span
            class="text-muted-foreground"
          >
            detailTotal
            : 
          </span>
          <span
            class="tabular-nums text-foreground font-numeric"
          >
            AFN 100.00
          </span>
        </div>
        <div>
          <span
            class="text-muted-foreground"
          >
            detailCreatedAt
            : 
          </span>
          <span
            class="text-foreground"
          >
            9/8/2026
          </span>
        </div>
      </div>
    </div>
    <div
      class="overflow-hidden rounded-xl bg-card shadow-card ring-[0.65px] ring-border/50"
    >
      <div
        class="p-5 pb-0"
      >
        <h2
          class="mb-4 text-base font-semibold text-foreground"
        >
          detailSectionItems
        </h2>
      </div>
      <div
        class="overflow-x-auto"
      >
        <table
          class="w-full text-sm"
        >
          <thead
            class="bg-muted"
          >
            <tr>
              <th
                class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
              >
                detailColItem
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide tabular-nums"
              >
                detailColOrdered
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide tabular-nums"
              >
                detailColReceived
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide tabular-nums"
              >
                detailColUnitCost
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide tabular-nums"
              >
                detailColLineTotal
              </th>
            </tr>
          </thead>
          <tbody
            class="divide-y divide-border"
          >
            <tr
              class="hover:bg-muted/50"
            >
              <td
                class="px-4 py-3 text-foreground"
              >
                Amoxicillin 500mg
              </td>
              <td
                class="px-4 py-3 text-end tabular-nums text-muted-foreground"
                data-testid="item-ordered-cat-1"
              >
                10
              </td>
              <td
                class="px-4 py-3 text-end tabular-nums text-muted-foreground"
                data-testid="item-received-cat-1"
              >
                0
              </td>
              <td
                class="px-4 py-3 text-end tabular-nums text-muted-foreground font-numeric"
                data-testid="item-unitcost-cat-1"
              >
                AFN 10.00
              </td>
              <td
                class="px-4 py-3 text-end tabular-nums text-muted-foreground font-numeric"
              >
                AFN 100.00
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="overflow-hidden rounded-xl bg-card shadow-card ring-[0.65px] ring-border/50"
      data-testid="receipt-history"
    >
      <div
        class="p-5 pb-0"
      >
        <h2
          class="mb-4 text-base font-semibold text-foreground"
        >
          receiptHistory
        </h2>
      </div>
      <div
        class="p-5 pt-0 text-sm text-muted-foreground"
      >
        receiptHistoryEmpty
      </div>
    </div>
  </div>
</div>
`;

exports[`PurchaseOrderDetailPage > RTL snapshot 1`] = `
<div
  dir="rtl"
>
  <div
    class="flex flex-col gap-4"
  >
    <button
      class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground h-8 gap-1 [@media(pointer:coarse)]:min-h-11 w-fit px-0"
      data-size="sm"
      data-slot="button"
      data-testid="back-button"
      data-variant="ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left me-1"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
      title
    </button>
    <h1
      class="text-2xl font-semibold text-foreground"
    >
      detail
       · 
      Kabul Medical Supplies
       
      <span
        class="inline-flex items-center rounded-full bg-muted px-2.5 py-0.5 text-xs font-medium text-muted-foreground"
      >
        statusDraft
      </span>
    </h1>
    <div
      class="flex flex-wrap items-center gap-3"
    >
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
        data-size="default"
        data-slot="button"
        data-testid="mark-sent-btn"
        data-variant="default"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-send me-2"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
          />
          <path
            d="m21.854 2.147-10.94 10.939"
          />
        </svg>
        detailMarkSent
      </button>
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-background [data-theme=dark_&]:bg-transparent [data-theme=dark_&]:hover:bg-input/30 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11 text-destructive border-destructive/40 hover:bg-destructive/10 hover:text-destructive"
        data-size="default"
        data-slot="button"
        data-testid="cancel-btn"
        data-variant="outline"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-x me-2"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m15 9-6 6"
          />
          <path
            d="m9 9 6 6"
          />
        </svg>
        detailCancel
      </button>
    </div>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="mb-4 text-base font-semibold text-foreground"
      >
        detailSectionInfo
      </h2>
      <div
        class="grid gap-3 text-sm md:grid-cols-2"
      >
        <div>
          <span
            class="text-muted-foreground"
          >
            detailSupplier
            : 
          </span>
          <span
            class="text-foreground"
          >
            Kabul Medical Supplies
          </span>
        </div>
        <div>
          <span
            class="text-muted-foreground"
          >
            detailTotal
            : 
          </span>
          <span
            class="tabular-nums text-foreground font-numeric"
          >
            AFN 100.00
          </span>
        </div>
        <div>
          <span
            class="text-muted-foreground"
          >
            detailCreatedAt
            : 
          </span>
          <span
            class="text-foreground"
          >
            9/8/2026
          </span>
        </div>
      </div>
    </div>
    <div
      class="overflow-hidden rounded-xl bg-card shadow-card ring-[0.65px] ring-border/50"
    >
      <div
        class="p-5 pb-0"
      >
        <h2
          class="mb-4 text-base font-semibold text-foreground"
        >
          detailSectionItems
        </h2>
      </div>
      <div
        class="overflow-x-auto"
      >
        <table
          class="w-full text-sm"
        >
          <thead
            class="bg-muted"
          >
            <tr>
              <th
                class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
              >
                detailColItem
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide tabular-nums"
              >
                detailColOrdered
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide tabular-nums"
              >
                detailColReceived
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide tabular-nums"
              >
                detailColUnitCost
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide tabular-nums"
              >
                detailColLineTotal
              </th>
            </tr>
          </thead>
          <tbody
            class="divide-y divide-border"
          >
            <tr
              class="hover:bg-muted/50"
            >
              <td
                class="px-4 py-3 text-foreground"
              >
                Amoxicillin 500mg
              </td>
              <td
                class="px-4 py-3 text-end tabular-nums text-muted-foreground"
                data-testid="item-ordered-cat-1"
              >
                10
              </td>
              <td
                class="px-4 py-3 text-end tabular-nums text-muted-foreground"
                data-testid="item-received-cat-1"
              >
                0
              </td>
              <td
                class="px-4 py-3 text-end tabular-nums text-muted-foreground font-numeric"
                data-testid="item-unitcost-cat-1"
              >
                AFN 10.00
              </td>
              <td
                class="px-4 py-3 text-end tabular-nums text-muted-foreground font-numeric"
              >
                AFN 100.00
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="overflow-hidden rounded-xl bg-card shadow-card ring-[0.65px] ring-border/50"
      data-testid="receipt-history"
    >
      <div
        class="p-5 pb-0"
      >
        <h2
          class="mb-4 text-base font-semibold text-foreground"
        >
          receiptHistory
        </h2>
      </div>
      <div
        class="p-5 pt-0 text-sm text-muted-foreground"
      >
        receiptHistoryEmpty
      </div>
    </div>
  </div>
</div>
`;
